# pyginvaders

./: .flake8  .gitignore  Justfile  README.md  cspell.json  main.py  pyproject.toml  run_game.sh
.github/: copilot-instructions.md
docs/bug_fixes/: 2026-01-31-crash-on-player-hit.md  2026-01-31-sdl2-library-conflict.md
docs/tasks/: 2026-01-30-folder-structure.md  2026-01-30-moving-player.md  2026-01-30-pygame-hello.md  2026-01-30-refactor-shape-logic.md  2026-01-30-set-up-vscode.md  2026-01-31-factor-out-config.md  2026-01-31-font-arithmetic.md  2026-01-31-game-lost.md  2026-01-31-invader-bullets.md  2026-01-31-invaders-die-score.md  2026-01-31-invaders.md  2026-01-31-player-bullets.md  2026-01-31-player-can-restart.md  2026-01-31-player-fires-bullets.md  2026-01-31-player-win-condition.md  2026-01-31-shields.md  README.md
src/pyginvaders/: __init__.py  bullet.py  config.py  game.py  game_object.py  invader.py  invader_bullet.py  player.py  player_bullet.py  shield.py
tests/: conftest.py  test_game.py  test_game_over.py  test_invader.py  test_invader_bullet.py  test_player.py  test_player_bullet.py  test_player_win.py  test_restart.py  test_shield.py  test_shield_collisions.py
